# qsopt-ex

./: Makefile.am  README.md  configure.ac  docsForQSoptexLog.txt
additionals/: editor_dbl.c  lib_dbl.c  lpdata_mpq.c  qsopt_dbl.c  simplex_mpq.c
esolver/: esolver.c
qsopt_ex/: basis.c  basis.h  editor.c  eg_lpnum.c  exact.c  exact.h  factor.c  factor.h  fct.c  lib.c  lpdata.c  presolve.c  qsopt.c  qstruct.h  simplex.c  timing_log.c  timing_log.h  zeit.c
